# sill-ensoul

./: .gitignore  .mcp.json  CLAUDE.md  DESIGN.md  LICENSE  README.en.md  README.md  README.zh-CN.md  ROADMAP.md  SETUP.md  SHELL.md  TEST_SCRIPT.md  WORKFLOW.md  pyproject.toml  requirements.txt  run_tests.py
docs/: DESIGN.md  ROADMAP.md
ensoul/: SHELL.md  __init__.py  fts.py  init_cmd.py  okf.py  server.py
sova/: __init__.py  comm.py  fts.py  init_cmd.py  okf.py  registry.py  server.py
tests/: run_tests.py  test_cross_project.py  test_mcp_live.py  test_phase2.py  test_search.py  test_smoke.py
